css/style.css
/* Resetting the entire websites margin and padding to 0 */
* {
	margin: 0;
	padding: 0;
}


/* Setting the websites marging and padding to 0 from the start */
html, body {
    width: 100%;
	height: 100%;
	box-sizing: border-box;
	margin: 0;
  }

/* Making the anchor scrolling smooth  */
html{
	scroll-behavior: smooth;
}
.page-container{
	min-height: 100%;
	overflow: auto;
}

/* Styling the footer (My right reserved section) */
.footer
{
	width: 100%;
	background-color: #444;
	color: rgb(200, 200, 200);
	text-align: center;
	padding-top: 12px;
	padding-bottom: 12px;
}


/* Styling the body (entire page) */
body 
{
	margin: 0%;
	background: #333;
	font-family: 'Work Sans', sans-serif;
	font-weight: 400;
	animation: fadeIn 2s;
}

/* Fade In animation using simple opacity keyframes from and to */
@keyframes fadeIn {

	from {
		opacity: 0;
	}

	to {
		opacity: 1;
	}

}

.full-width {
	width: 100%;
	height: 250;
	background: #ccc;
}
.wrap {
	width: 100%;
	max-width: 24em;
	margin: 0 auto;
	padding: 0.25em 0.625em;
	text-align: center;
}

.section--medium {
	width: 100%;
	padding-bottom: 15px;
	padding-top: 15px;
	margin-top: 1;
}

.Projects-section--medium
{
	width: 100%;
	padding-bottom: 15px;
	padding-top: 15px;
}

.section {
	width: 100%;
	text-align: center;
}

.SectionContent{
	width: 100%;
	display: block;
	overflow: hidden;
}

.title--bigger {
	font-size: 60px;
}
 .title--medium 
 {
	font-size: 50px;
 }

.title {
	font-family: 'Work Sans', sans-serif;
	font-weight: 300;
	color: white;
}

.description{
	text-align: center;
	padding-left: 20%;
	padding-right: 20%;
	color: white;
	padding-bottom: 20px;
}

/* START OF CONTACT */

#social-links 
{
	display: inline-block;
}

.social-icons:visited 
{
	text-decoration: none;
}

a, a:visited a:active
{
	color: white;
	text-decoration: none;
	/* border-bottom: 1px white dotted; */
}

.social-icons
{
	padding-left: 12px;
	padding-right: 12px;
	color: white;
	font-size: 40px;
	opacity: 0.7;
	position: relative;
	z-index: 20;
	text-decoration: none;
	border: none;
}

.social-icons:hover
{
	opacity: 1.0;
}
/* END OF CONTACT */


/* START OF MY PROJECTS HEAD */
#MyProjects 
{
	background-color: #1b1919;
}

#MyProjectsTable
{
	display: table-cell;
	vertical-align: middle;
}

/* END OF MY PROJECTS HEAD*/

/* START OF MAIN PROJECTS CONTENT*/

.main-project-container
{
	margin: 15px;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
}

.gallery-description 
{
	padding-top: 9px;
	padding-left: 9px;
	padding-right: 9px;
	color: white;
	/* padding-bottom: 20px; */
}

.gallery-image
{
	width: 75%;
	height: auto;
	display: flex;
	/* margin-left: auto;
	margin-right: auto; */
}

.gallery
{
	padding: 50px;
}

/* END OF PROJECTS CONTENT */

/* START OF THE PROJECT PAGE */

.project-container
{
	padding-top: 75px;
}

.project-header
{
	text-align: center;
	text-decoration: none;
	color: white;
}

.project-image
{
	display: block;
	margin-left: auto;
	margin-right: auto;
	text-align: center;
}

.project-description
{
	color: white;
	font-family: 'Work Sans', sans-serif;
	font-weight: 300;
	margin: 0% 25% 0%;
	font-size: 20px;
	padding-top: 32px;
}

.bullet-points
{
	padding-left: 7%;
	color: white;
	font-family: 'Work Sans', sans-serif;
	font-weight: 300;
	font-size: 20px;
	padding-bottom: 32px;
}
/* END OF THE PROJECT PAGE */

/* START OF PERSONAL WORK */

/* Adding padding to top so the content isn't covered by the header */
.padding-top
{
	padding-top: 69px;
}

/* Floating the models to left and adding padding */
.model-viewer
{
	float: left;
	padding: 62px;
}

/* Styling the models dimensions */
#model
{
	min-height: 350px;
	min-width: 350px;
}

/* Adding flex-box personal work page */
.models-container
{
  margin: 15px;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.models-content-container
{
	float: left;
	display: flex;
}

.models-name
{
	color: white;
	font-family: 'Work Sans', sans-serif;
	font-weight: 300;
	font-size: 20px;
	text-align: center;
}

.models-description
{
	color: white;
	font-family: 'Work Sans', sans-serif;
	font-weight: 300;
	font-size: 20px;
}

/* END OF PERSONAL WORK */



/* Container properties */
.container 
{
	width: 80%;
	margin: 0;
}

/* Clear fixing the header so the header is together with the text */
header::after 
{
	content: '';
	display: table;
	clear: both;
}

/* Header properties section  */
header 
{
	background-color: rgb(200, 200, 200);
	width: 100%;
	position: fixed;
	opacity: 1;
	z-index: 10;
}

/* Floating everything in <nav> to the middle */
nav
{
	z-index: 1;
	float: middle;
}

/* Margin and Padding for unlisted items */
nav ul 
{
	margin: 0;
	padding: 0;
	list-style: none;
}

/* Padding on the header */
nav li 
{
	display: inline-block;
	margin-left: 50px;
	padding-top: 20px;
	padding-bottom: 20px;
	position: relative;
}

/* Header text properties */
nav a 
{
	color: #444;
	text-decoration: none;
	text-transform: uppercase;
	font-size: 14px;
}

/* On hover line colour */
nav a:hover 
{
	
	color: #000;
	
}

/* The on hover over header properties and transition animation (start from 0) */
.Fullscreen a::before
{
	content: '';
	display: block;
	height: 5px;
	width: 100%;
	background-color: #444;
	
	position: absolute;
	top: 0;
	width: 0%;
	
	transition: all ease-in-out 250ms;
}

/* The fully completed line on hover (end on 1) */
.Fullscreen a:hover::before 
{
	width: 100%;
}

/* Hide everything inside the navigation menu */
#subMyName, #subAboutMe, #subProjects, #subPersonalWork, #subContact, #subResume, #subCV
{	
	display: none;
}


/* Style the Navigation menu */
.MyLinks {
	overflow: hidden;
	background-color: rgb(200, 200, 200);
	position: relative;
	display: block;
	width: 100%;
	position: fixed;
	opacity: 0.97;
}


/* Styling the navigation menu links */
.MyLinks a {
	color: black;
	padding: 14px 16px;
	text-decoration: none;
	font-size: 14px;
	display: block;
}

/* Hiding the phone menus from the start of launch */
.MyLinks 
{
	display: none;	
}

/* Changing colour of the links when hovered over */
.MyLinks a:hover {
	background-color: #ddd;
	color: black;
}

/* Styling of the Hamburger Icon */
#icon {
	display: block;
	position: absolute;
	right: 0;
	top: 0;
	font-size: 40px;
	position: fixed;
	padding-right: 10px;
	padding-top: 5px;
}

/* Changing colour of icon  */
#icon {
	display: none;
	color: rgb(255, 255, 255);
}

/* Hide/block the Hamburger Menu and Icon when above 1070px */
@media only screen and (max-width: 1070px) 
{
	.Fullscreen
	{
		display: none;
	}

	.MyLinks 
	{
		display: block;	
	}

	#icon
	{
		display: block;
	}

	nav li 
	{
		margin-left: 15px;
	}

}

.JumpOffset {
	display: block;
	margin-top: -52px;
	height: 40px;
	visibility: transparent;
}

/* START OF SLIDESHOW */

* {box-sizing:border-box}

/* Slideshow container */
.slideshow-container {
  position: relative;
  margin: auto;
  top: 26px;
  width: 100%;
  z-index: 2;
  padding-top: 30px;
}

/* Hide the images by default */
.Slideshow {
  display: none;
}

/* Next and previous buttons */
.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  color: white;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
}

/* The position of the right button */
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
  background-color: rgba(0,0,0,0.8);
}

/* Text in bottom centre of the slideshow */
.text {
  color: #f2f2f2;
  font-size: 15px;
  padding: 8px 12px;
  position: absolute;
  bottom: 8px;
  width: 100%;
  text-align: center;
}

/* Number text top left of slideshow 1-3 */
.numbertext {
  color: #f2f2f2;
  font-size: 12px;
  padding: 8px 12px;
  position: absolute;
  top: 0;
  padding-top: 40px;
}

/* The dots/bullets/indicators */
.dot {
  cursor: pointer;
  height: 15px;
  width: 15px;
  margin: 0 10px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.active, .dot:hover {
  background-color: #717171;
}

/* Fading animation */
.fade {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 1.5s;
  animation-name: fade;
  animation-duration: 1.5s;
}

@-webkit-keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

@keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

/* END OF SLIDESHOW */

